--- a/11_NeuralNetwork_5Layer.ipynb
+++ b/11_NeuralNetwork_5Layer.ipynb
@@ -4,19 +4,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 5层神经网络模型：深度多层感知机（Deep MLP）\n",
+        "# 5-Layer Neural Network Model: Deep Multi-Layer Perceptron (Deep MLP)\n",
         "\n",
-        "5层神经网络（深度多层感知机）通过多层非线性变换学习更复杂的特征表示：\n",
+        "The 5-layer neural network (Deep Multi-Layer Perceptron) learns more complex feature representations through multiple layers of nonlinear transformations:\n",
         "\n",
-        "- **输入层**：特征输入\n",
-        "- **隐藏层1-4**：多层非线性变换（ReLU激活）\n",
-        "- **输出层**：回归预测\n",
+        "- **Input Layer**: Feature input\n",
+        "- **Hidden Layers 1-4**: Multiple layers of nonlinear transformations (ReLU activation)\n",
+        "- **Output Layer**: Regression prediction\n",
         "\n",
-        "主要超参数：\n",
-        "- `hidden_units`：每层隐藏层神经元数量\n",
-        "- `learning_rate`：学习率\n",
-        "- `batch_size`：批次大小\n",
-        "- `dropout`：Dropout比率（防止过拟合）\n"
+        "Main hyperparameters:\n",
+        "- `hidden_units`: Number of neurons in each hidden layer\n",
+        "- `learning_rate`: Learning rate\n",
+        "- `batch_size`: Batch size\n",
+        "- `dropout`: Dropout ratio (prevents overfitting)\n"
       ]
     },
     {
@@ -80,7 +80,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 1. 定义神经网络模型\n"
+        "## 1. Define Neural Network Model\n"
       ]
     },
     {
@@ -157,7 +157,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 2. 加载数据\n"
+        "## 2. Load Data\n"
       ]
     },
     {
@@ -196,7 +196,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 3. 设置时间序列交叉验证\n"
+        "## 3. Set Up Time Series Cross-Validation\n"
       ]
     },
     {
@@ -293,7 +293,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 5. 训练函数\n"
+        "## 5. Training Function\n"
       ]
     },
     {
@@ -915,7 +915,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 9. 可视化结果\n"
+        "## 9. Visualize Results\n"
       ]
     },
     {
